V4.12.1.262 - Fixed deprecated methods